- merged & fixed compileToIR -> Makefile switch